My First Initial Commit

--- a/home.html
+++ b/home.html
@@ -64,8 +64,7 @@
       <h1 class="display-5 fw-bold text-body-emphasis">A tradition in Simcoe</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-0 px-4">
-          Hic mollitia necessitatibus et alias galisum non repellendus quia a consequatur excepturi ut fugit reprehenderit quo animi repudiandae. Aut aliquam quidem sed minima quod ut consequuntur nemo. Rem soluta provident et molestiae laborum ut voluptatem sint 33 rerum deleniti ex numquam nobis ut facilis blanditiis. Et aspernatur vitae et facilis necessitatibus aut adipisci sequi.
-          </p>
+         Hello Abdul and welcome back </p>
         <!--<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
           <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
